Fix color contrast for ad

--- a/assets/css/components/ads.css
+++ b/assets/css/components/ads.css
@@ -7,6 +7,7 @@
   max-width: 100%;
   height: 114px; /* 1 */
   background-color: white;
+  color: #444;
 }
 
 @media (min-width: 1300px) {
